[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "l0gateway"
path = "src/bin/client.rs"

[[bin]]
name = "l0gatewayd"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.4.14", features = [ "derive" ] }
tokio = { version = "1.35.1", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
