[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "l0gateway"
path = "src/bin/client.rs"

[[bin]]
name = "l0gatewayd"
path = "src/bin/server.rs"

[dependencies]
eth-service = { path = "../eth-service", optional = true }

anyhow = "1.0.79"
clap = { version = "4.4.18", features = [ "derive" ] }
prost = "0.12.3"
tokio = { version = "1.35.1", features = [ "macros", "process", "rt-multi-thread" ] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.10.2"

[features]
default = ["eth"]
eth = ["dep:eth-service"]
